--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "pg": "^7.17.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.3",
     "uuid": "^3.3.3"
   }
 }
