--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
     "uuid": "^3.3.3"
+  },
+  "dependencies": {
+    "winston": "^3.2.1"
   }
 }
