--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@hapi/joi": "^16.1.8",
+    "cors": "^2.8.5",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "pg": "^7.17.1",
