--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@babel/preset-env": "^7.7.7",
     "@hapi/joi": "^16.1.8",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "jasmine": "^3.5.0",
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
